--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Eloor GHSS - Where Learning and Creativity Meets </title>
+    <title> Eloor GHSS - Where Learning and Creativity Meets </title> 
+     <!-- META DATA -->
+  <meta name="description" content="Official website of GHSS Eloor, Kerala. Find school news, announcements, student info, and more.">
+  <meta name="keywords" content="GHSS Eloor, school, Kerala school, government school, Eloor, education">
+  <meta name="author" content="Mahi (Mahadev Ajay)">
     <style>
         * {
             margin: 0;
