--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             <div class="footer-section">
                 <h3>Contact Information</h3>
                 <p>📍 ELOOR GHSS Campus<br>
-                   Rloor, Kerala, India</p>
+                   Eloor, Kerala, India</p>
                 <p>📞 Phone: +91 0484 254 5440</p>
                 <p>✉️ Email: eloorghss@email.com</p>
             </div>
