--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="ELOOR GHSS, Higher Secondary School, Kerala School, +1 +2 Admissions, Government School, Eloor, Science Commerce Arts">
 <meta name="author" content="ELOOR GHSS">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERLOOR GHSS - Government Higher Secondary School</title>
+    <title>ELOOR GHSS - Government Higher Secondary School</title>
     <style>
         * {
             margin: 0;
@@ -560,7 +560,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 RLOOR Government Higher Secondary School. All rights reserved.</p>
+            <p>&copy; 2025 ELOOR Government Higher Secondary School. All rights reserved.</p>
         </div>
     </footer>
 
