--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico" type="image/x-icon"> 
     <meta name="description" content="ELOOR GHSS is a government higher secondary school in Kerala offering Science, Commerce, and Arts streams with excellent facilities and results.">
-<meta name="keywords" content="ELOOR GHSS, Higher Secondary School, Kerala School, +1 +2 Admissions, Government School, Eloor, Science Commerce Arts">
-<meta name="author" content="ELOOR GHSS">
+    <meta name="keywords" content="ELOOR GHSS, Higher Secondary School, Kerala School, +1 +2 Admissions, Government School, Eloor, Science Commerce Arts">
+    <meta name="author" content="ELOOR GHSS">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ELOOR GHSS - Government Higher Secondary School</title>
+    <title>ERLOOR GHSS - Government Higher Secondary School</title>
     <style>
         * {
             margin: 0;
@@ -114,9 +114,8 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 600"><rect fill="%23f0f8ff" width="1200" height="600"/><circle fill="%23e6f3ff" cx="200" cy="150" r="80"/><circle fill="%23d9edff" cx="800" cy="300" r="120"/><circle fill="%23cce7ff" cx="1000" cy="100" r="60"/></svg>');
-            background-size: cover;
-            background-position: center;
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('Screenshot 2025-07-16 203550.png') center/cover;
+            backdrop-filter: blur(2px);
             height: 70vh;
             display: flex;
             align-items: center;
@@ -368,9 +367,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-section">
-               <div class="logo">
-    <img src="https://uploads.onecompiler.io/43qutw7f9/43qutk9ng/favicon.png" alt="ELOOR GHSS Logo">
-               </div>
+                <div class="logo">ELOOR</div>
                 <div class="school-info">
                     <h1>ELOOR GHSS</h1>
                     <p>Government Higher Secondary School</p>
@@ -395,16 +392,16 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section with your image background -->
     <section class="hero" id="home">
         <div class="hero-content">
             <h2>Excellence in Higher Secondary Education</h2>
             <p>Empowering students for success in +1 and +2 programs</p>
-            <a href="#admissions" class="cta-button">ABOUT US</a>
+            <a href="#admissions" class="cta-button">Apply Now</a>
         </div>
     </section>
 
-    <!-- Main Content -->
+    <!-- Rest of your original content remains exactly the same -->
     <main class="main-content">
         <!-- About Section -->
         <section class="section" id="about">
@@ -453,9 +450,9 @@
         <section class="section" id="admissions">
             <h2>Admissions</h2>
             <div class="admission-highlight">
-                <h3>KNOW US</h3>
+                <h3>Admissions Open for 2025-26</h3>
                 <p>Join our prestigious institution and embark on a journey of academic excellence</p>
-                <a href="#contact" class="cta-button">Get More Info</a>
+                <a href="#contact" class="cta-button">Get Admission Info</a>
             </div>
             
             <div class="cards-grid">
@@ -526,10 +523,10 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Contact Information</h3>
-                <p>📍 ELOOR GHSS Campus<br>
-                   Eloor, Kerala, India</p>
-                <p>📞 Phone: +91 0484 254 5440</p>
-                <p>✉️ Email: eloorghss@email.com</p>
+                <p>📍 RLOOR GHSS Campus<br>
+                   Rloor, Kerala, India</p>
+                <p>📞 Phone: +91 XXXX-XXXXXX</p>
+                <p>✉️ Email: info@rloorghss.edu.in</p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
@@ -560,7 +557,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 ELOOR Government Higher Secondary School. All rights reserved.</p>
+            <p>&copy; 2025 RLOOR Government Higher Secondary School. All rights reserved.</p>
         </div>
     </footer>
 
