--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico" type="image/x-icon"> 
     <meta name="description" content="ELOOR GHSS is a government higher secondary school in Kerala offering Science, Commerce, and Arts streams with excellent facilities and results.">
-<meta name="keywords" content="ELOOR GHSS, Higher Secondary School, Kerala School, +1 +2 Admissions, Government School, Eloor, Science Commerce Arts">
-<meta name="author" content="ELOOR GHSS">
+    <meta name="keywords" content="ELOOR GHSS, Higher Secondary School, Kerala School, +1 +2 Admissions, Government School, Eloor, Science Commerce Arts">
+    <meta name="author" content="ELOOR GHSS">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ELOOR GHSS - Government Higher Secondary School</title>
     <style>
@@ -112,14 +112,18 @@
             transform: translateY(-2px);
         }
 
-    <!-- Hero Section -->
-<section class="hero" id="home" style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('Screenshot 2025-07-16 203550.png') center/cover; backdrop-filter: blur(2px);">
-    <div class="hero-content">
-        <h2>Excellence in Higher Secondary Education</h2>
-        <p>Empowering students for success in +1 and +2 programs</p>
-        <a href="#admissions" class="cta-button">Apply Now</a>
-    </div>
-</section>
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('Screenshot 2025-07-16 203550.png') center/cover;
+            backdrop-filter: blur(2px);
+            height: 70vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: white;
+            position: relative;
+        }
 
         .hero-content h2 {
             font-size: 3rem;
@@ -390,7 +394,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section with your image background -->
     <section class="hero" id="home">
         <div class="hero-content">
             <h2>Excellence in Higher Secondary Education</h2>
