--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico" type="image/x-icon"> 
+    <!-- Open Graph tags for better branding -->
+<meta property="og:site_name" content="ELOOR GHSS">
+<meta property="og:title" content="ELOOR GHSS - Official Website">
+<meta property="og:description" content="Official website of GHSS Eloor - Government Higher Secondary School in Kerala.">
+<meta property="og:url" content="https://mahadevajay.github.io/ELOOR-GHSS/">
+<meta property="og:type" content="website">
+
     <meta name="description" content="ELOOR GHSS is a government higher secondary school in Kerala offering Science, Commerce, and Arts streams with excellent facilities and results.">
     <meta name="keywords" content="ELOOR GHSS, Higher Secondary School, Kerala School, +1 +2 Admissions, Government School, Eloor, Science Commerce Arts">
     <meta name="author" content="ELOOR GHSS">
