--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:site_name" content="ELOOR GHSS">
 <meta property="og:title" content="ELOOR GHSS - Official Website">
 <meta property="og:description" content="Official website of GHSS Eloor - Government Higher Secondary School in Kerala.">
-<meta property="og:url" content="https://mahadevajay.github.io/ELOOR-GHSS/">
+<meta property="og:url" content="https://eloorghss.github.io/.github.io/ELOOR-GHSS/">
 <meta property="og:type" content="website">
 
     <meta name="description" content="ELOOR GHSS is a government higher secondary school in Kerala offering Science, Commerce, and Arts streams with excellent facilities and results.">
